Move highlight to Free Pickup, reframe Cash Offer as surprise bonus

--- a/pickup.html
+++ b/pickup.html
@@ -134,15 +134,16 @@
             <p class="section-subtitle">Three ways we can help</p>
 
             <div class="pickup-options">
-                <div class="pickup-option">
+                <div class="pickup-option featured">
                     <div class="option-icon">🆓</div>
                     <h3>Free Pickup</h3>
-                    <p>For eligible pieces in good condition that we can resell after cleaning</p>
+                    <p>For eligible pieces in good condition that we can resell after cleaning. Most common option!</p>
                 </div>
-                <div class="pickup-option featured">
+                <div class="pickup-option">
                     <div class="option-icon">💰</div>
                     <h3>Cash Offer</h3>
-                    <p>For high-demand designer pieces, we may offer cash on the spot</p>
+                    <p>Have a designer piece? We sometimes pay cash for high-demand brands like West Elm, CB2, or
+                        Pottery Barn</p>
                 </div>
                 <div class="pickup-option">
                     <div class="option-icon">🤝</div>
