Add quick disqualifiers checklist to Text CTA section for self-filtering

--- a/pickup.html
+++ b/pickup.html
@@ -207,6 +207,15 @@
                         <li>📷 Brand tag (if visible)</li>
                         <li>📍 Your zip code</li>
                     </ul>
+                    <div class="quick-check">
+                        <p><strong>Quick check before you text:</strong></p>
+                        <ul class="disqualifiers">
+                            <li>🚫 No bed bugs or pest issues</li>
+                            <li>🚫 No heavy smoke odor</li>
+                            <li>🚫 No major structural damage</li>
+                        </ul>
+                        <p class="check-note">If none of these apply, you're good to go!</p>
+                    </div>
                     <a href="sms:267-265-9284?body=Hi! I have a couch I'd like picked up. Here are some photos:%0A%0AZip code: "
                         class="btn btn-primary btn-lg">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
