Switch to flat fee pricing ( includes delivery, stairs, placement) - simpler and more confident

--- a/buy.html
+++ b/buy.html
@@ -266,29 +266,19 @@
                     </div>
                 </div>
 
-                <div class="service-info-card">
-                    <h3>💵 Delivery Pricing</h3>
-                    <div class="pricing-info">
-                        <div class="price-item">
-                            <span class="price-label">Base Delivery</span>
-                            <span class="price-value">$50 - $75</span>
-                            <span class="price-note">Depends on distance</span>
-                        </div>
-                        <div class="price-item">
-                            <span class="price-label">Stairs</span>
-                            <span class="price-value">+$15/flight</span>
-                            <span class="price-note">Elevator = no charge</span>
-                        </div>
-                        <div class="price-item">
-                            <span class="price-label">Placement</span>
-                            <span class="price-value">Included</span>
-                            <span class="price-note">We set it up for you</span>
-                        </div>
-                        <div class="price-item">
-                            <span class="price-label">Old Couch Removal</span>
-                            <span class="price-value">Ask for quote</span>
-                            <span class="price-note">We can haul your old one!</span>
-                        </div>
+                <div class="service-info-card featured-card">
+                    <h3>🚚 Delivery: $65 Flat</h3>
+                    <div class="flat-fee-includes">
+                        <p class="flat-fee-tagline">One price, everything included:</p>
+                        <ul>
+                            <li>✓ Delivery to your door</li>
+                            <li>✓ White-glove placement</li>
+                            <li>✓ Up to 2 flights of stairs</li>
+                            <li>✓ Blanket protection for floors</li>
+                            <li>✓ Careful navigation of tight spaces</li>
+                        </ul>
+                        <p class="flat-fee-note">4th floor walkup or need your old couch hauled away? Just let us know —
+                            we'll give you a quick quote.</p>
                     </div>
                 </div>
 
@@ -399,9 +389,9 @@
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>Absolutely! We provide white-glove delivery — we carry the couch into your home and place it
-                            exactly where you want it. There's a small additional fee for stairs ($15/flight), but
-                            elevator buildings have no extra charge.</p>
+                        <p>Absolutely! Our $65 flat delivery fee includes carrying the couch into your home, up to 2
+                            flights of stairs, and placing it exactly where you want it. If you're on the 4th floor or
+                            higher, just let us know and we'll give you a quick quote.</p>
                     </div>
                 </div>
 
