Change to all-in pricing - delivery bundled into couch price, no visible separate fee

--- a/buy.html
+++ b/buy.html
@@ -267,9 +267,9 @@
                 </div>
 
                 <div class="service-info-card featured-card">
-                    <h3>🚚 Delivery: $65 Flat</h3>
+                    <h3>🚚 All-In Pricing</h3>
                     <div class="flat-fee-includes">
-                        <p class="flat-fee-tagline">One price, everything included:</p>
+                        <p class="flat-fee-tagline">The price you see is the price you pay. Every couch includes:</p>
                         <ul>
                             <li>✓ Delivery to your door</li>
                             <li>✓ White-glove placement</li>
@@ -389,9 +389,9 @@
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>Absolutely! Our $65 flat delivery fee includes carrying the couch into your home, up to 2
-                            flights of stairs, and placing it exactly where you want it. If you're on the 4th floor or
-                            higher, just let us know and we'll give you a quick quote.</p>
+                        <p>Absolutely! Every couch price includes full delivery, up to 2 flights of stairs, and
+                            white-glove placement exactly where you want it. If you're on the 4th floor or higher, just
+                            let us know and we'll give you a quick quote.</p>
                     </div>
                 </div>
 
