Add tip mention to delivery FAQ - team keeps 100%

--- a/buy.html
+++ b/buy.html
@@ -392,6 +392,7 @@
                         <p>Absolutely! Every couch price includes full delivery, up to 2 flights of stairs, and
                             white-glove placement exactly where you want it. If you're on the 4th floor or higher, just
                             let us know and we'll give you a quick quote.</p>
+                        <p>We're always grateful for tips — our team keeps 100% of any tip you choose to give! 🙏</p>
                     </div>
                 </div>
 
