Replace all em/en dashes with natural phrasing, change 'our team' to 'our delivery team'

--- a/buy.html
+++ b/buy.html
@@ -109,7 +109,7 @@
                     <div class="step-number">2</div>
                     <div class="step-icon">📅</div>
                     <h3>Schedule Delivery</h3>
-                    <p>Choose a time that works for you — we're flexible with scheduling</p>
+                    <p>Choose a time that works for you. We're flexible with scheduling!</p>
                 </div>
                 <div class="step-connector"></div>
                 <div class="step-card">
@@ -212,7 +212,7 @@
             <!-- Authenticity Section -->
             <div class="authenticity-section">
                 <h3>Behind the Scenes</h3>
-                <p>Real photos of our process — we take pride in every delivery</p>
+                <p>Real photos of our process. We take pride in every delivery.</p>
                 <div class="authenticity-gallery">
                     <div class="auth-image">
                         <img src="images/wrapping-couch.jpg" alt="Wrapping couch for delivery">
@@ -260,7 +260,7 @@
                                 <li>Conshohocken</li>
                                 <li>Media / Delaware County</li>
                                 <li>Cherry Hill, NJ</li>
-                                <li>And more — just ask!</li>
+                                <li>And more (just ask!)</li>
                             </ul>
                         </div>
                     </div>
@@ -277,8 +277,8 @@
                             <li>✓ Blanket protection for floors</li>
                             <li>✓ Careful navigation of tight spaces</li>
                         </ul>
-                        <p class="flat-fee-note">4th floor walkup or need your old couch hauled away? Just let us know —
-                            we'll give you a quick quote.</p>
+                        <p class="flat-fee-note">4th floor walkup or need your old couch hauled away? Just let us know
+                            and we'll give you a quick quote.</p>
                     </div>
                 </div>
 
@@ -286,8 +286,8 @@
                     <h3>📅 Scheduling</h3>
                     <div class="schedule-info">
                         <p><strong>Delivery Days:</strong> 7 days a week</p>
-                        <p><strong>Hours:</strong> 9 AM – 5 PM</p>
-                        <p class="schedule-note">Need a special time? Just ask — we're flexible!</p>
+                        <p><strong>Hours:</strong> 9 AM to 5 PM</p>
+                        <p class="schedule-note">Need a special time? Just ask, we're flexible!</p>
                     </div>
                 </div>
 
@@ -325,7 +325,7 @@
                     <p class="about-intro">I'm a recent Penn State graduate (Math, Class of 2025) who saw too many
                         quality couches going to waste while people paid premium prices for new furniture.</p>
                     <p class="about-body">Every piece I sell is personally inspected, deep-cleaned, and delivered to
-                        your door. I treat every customer like a neighbor — because in Philly, we probably are.</p>
+                        your door. I treat every customer like a neighbor because in Philly, we probably are.</p>
                     <div class="about-values">
                         <div class="value-item">
                             <span class="value-icon">✋</span>
@@ -366,8 +366,8 @@
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>Yes! Pet hair and minor pet odor are no problem — our deep-cleaning extraction process
-                            removes pet dander, hair, and odors. We clean every couch thoroughly before selling.</p>
+                        <p>Yes! Pet hair and minor pet odor are no problem. Our deep-cleaning extraction process removes
+                            pet dander, hair, and odors. We clean every couch thoroughly before selling.</p>
                     </div>
                 </div>
 
@@ -392,7 +392,8 @@
                         <p>Absolutely! Every couch price includes full delivery, up to 2 flights of stairs, and
                             white-glove placement exactly where you want it. If you're on the 4th floor or higher, just
                             let us know and we'll give you a quick quote.</p>
-                        <p>We're always grateful for tips — our team keeps 100% of any tip you choose to give! 🙏</p>
+                        <p>We're always grateful for tips, and our delivery team keeps 100% of any tip you choose to
+                            give! 🙏</p>
                     </div>
                 </div>
 
@@ -467,7 +468,7 @@
                     <h4>Get in Touch</h4>
                     <a href="tel:267-265-9284" class="footer-phone">📞 267-265-9284</a>
                     <a href="sms:267-265-9284" class="footer-text">💬 Text Us Anytime</a>
-                    <p class="footer-hours">Available 9 AM – 5 PM, 7 days a week</p>
+                    <p class="footer-hours">Available 9 AM to 5 PM, 7 days a week</p>
                 </div>
                 <div class="footer-links">
                     <h4>Quick Links</h4>
