--- a/buy.html
+++ b/buy.html
@@ -17,7 +17,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="/" class="logo">Navarro<span>Furniture</span></a>
+            <a href="/" class="logo"><img src="images/logo-nav.svg" alt="Navarro Furniture" class="logo-img"></a>
 
             <div class="nav-links">
                 <a href="#inventory">Inventory</a>
@@ -461,7 +461,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <a href="/" class="logo">Navarro<span>Furniture</span></a>
+                    <a href="/" class="logo"><img src="images/logo-nav.svg" alt="Navarro Furniture"
+                            class="logo-img"></a>
                     <p>Quality pre-owned couches, professionally cleaned and delivered in the Philadelphia area.</p>
                 </div>
                 <div class="footer-contact">
